throw exception not reservable